[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devmind-mcp"
version = "0.1.0"
description = "MCP server for deep codebase understanding"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "GitPython>=3.1.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
devmind-mcp = "server:main"

[tool.setuptools.packages.find]
where = ["."]